
2021-09-06  Simon Sobisch <simonsobisch@gnu.org>

	* exception.def, exception-io.def: update for COBOL 202x,
	  also adding some entries from COBOL 2014 and dropping one wrong
	* fileio.c: handling of COB_EC_I_O_RECORD_CONTENT,
	  distinguish between COB_EC_I_O_EOP and COB_EC_I_O_EOP_OVERFLOW
	* fileio.c (update_fcd_to_file): don't set error status at 0x

2021-08-31  Simon Sobisch <simonsobisch@gnu.org>

	* intrinsic.c, common.h: implemented (cob_intr_bit_of),
	  (cob_intr_bit_to_char)

2021-07-12  Simon Sobisch <simonsobisch@gnu.org>

	* intrinsic.c, common.h: implemented (cob_intr_hex_of),
	  (cob_intr_hex_to_char)

2021-07-02  Simon Sobisch <simonsobisch@gnu.org>

	* reportio.c: move hard line/col limit to REPORT_MAX_LINES REPORT_MAX_COLS
	* reportio.c (write_rec): changed to completely use cob_write
	  for CODE IS to handle all file attributes; backup and restore
	  original record definition

2021-07-07  Ron Norman <rjn@inglenet.com>

	* reportio.c (cob_report_generate): Fix bug #745 - missing invoke of
	  DECLARATIVES for DETAIL line

2021-01-07  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (print_version): msgid change moving URLs to parameter
	  per gettext-guidelines
	* common.h: version defines to 3.2.0

2020-12-18  Simon Sobisch <simonsobisch@gnu.org>

	FR #397: add support for JSON GENERATE anonymous JSON objects
	* mlio.c (generate_json_from_tree): handle OMITTED NAME attribute

2020-12-08  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (libcob_la_LDFLAGS): updated version-info

2020-12-07  Simon Sobisch <simonsobisch@gnu.org>

	* termio.c (cob_dump_field): complete rewrite to allow any size of OCCURS
	  to be checked for "same as" and to allow that also with nested OCCURS

2020-12-05  Simon Sobisch <simonsobisch@gnu.org>

	* common.h, fileio.c, intrinsic.c: removed unused include sys/timeb.h and
	  definitions for timeb and ftime
	* termio.c (setup_lvlwrk_and_dump_null_adrs): handle level 0 as INDEX
